Fix normal columns not being aligned middle on Tables. Add peruuta kutsu header.

--- a/henkilo-ui/src/main/static/src/components/anomus/AnomusPage.css
+++ b/henkilo-ui/src/main/static/src/components/anomus/AnomusPage.css
@@ -5,7 +5,6 @@
 
 .anomus-table .ReactTable .rt-resizable-header.rt-th {
     border-right: 1px solid #d5d5d5 !important;
-    line-height: 40px;
 }
 
 .anomus-table .ReactTable .rt-resizable-header.rt-th:last-child {
